@@ -39,7 +39,7 @@ public class CompositeTriggerType extends TriggerType {
      * Creates an instance of {@code CompositeTriggerType} with ordered set of {@link Trigger} modules. It initializes
      * only base properties of the {@code CompositeTriggerType}.
      *
-     * @param UID the {@link TriggerType}'s identifier, or {@code null} if a random identifier should be
+     * @param uid the {@link TriggerType}'s identifier, or {@code null} if a random identifier should be
      *            generated.
      * @param configDescriptions describing meta-data for the configuration of the future {@link Trigger} instances.
      * @param outputs a {@link List} with {@link Output} meta-information descriptions of the future
@@ -47,10 +47,10 @@ public class CompositeTriggerType extends TriggerType {
      * @param children is a {@link List} of {@link Trigger} modules.
      *
      */
-    public CompositeTriggerType(@Nullable String UID, @Nullable List<ConfigDescriptionParameter> configDescriptions,
+    public CompositeTriggerType(@Nullable String uid, @Nullable List<ConfigDescriptionParameter> configDescriptions,
             @Nullable List<Output> outputs, @Nullable List<Trigger> children) {
-        super(UID, configDescriptions, outputs);
-        this.children = children != null ? Collections.unmodifiableList(children) : Collections.emptyList();
+        super(uid, configDescriptions, outputs);
+        this.children = children != null ? Collections.unmodifiableList(children) : List.of();
     }
 
     /**
@@ -75,7 +75,7 @@ public class CompositeTriggerType extends TriggerType {
             @Nullable String label, @Nullable String description, @Nullable Set<String> tags,
             @Nullable Visibility visibility, @Nullable List<Output> outputs, @Nullable List<Trigger> children) {
         super(UID, configDescriptions, label, description, tags, visibility, outputs);
-        this.children = children != null ? Collections.unmodifiableList(children) : Collections.emptyList();
+        this.children = children != null ? Collections.unmodifiableList(children) : List.of();
     }
 
     /**
