@@ -12,7 +12,6 @@
  */
 package org.openhab.core.thing.internal.console;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -196,11 +195,10 @@ public final class FirmwareUpdateConsoleCommandExtension extends AbstractConsole
 
     @Override
     public List<String> getUsages() {
-        return Arrays.asList(new String[] {
-                buildCommandUsage(SUBCMD_LIST + " <thingUID>", "lists the available firmwares for a thing"),
+        return List.of(buildCommandUsage(SUBCMD_LIST + " <thingUID>", "lists the available firmwares for a thing"),
                 buildCommandUsage(SUBCMD_STATUS + " <thingUID>", "lists the firmware status for a thing"),
                 buildCommandUsage(SUBCMD_CANCEL + " <thingUID>", "cancels the update for a thing"), buildCommandUsage(
-                        SUBCMD_UPDATE + " <thingUID> <firmware version>", "updates the firmware for a thing") });
+                        SUBCMD_UPDATE + " <thingUID> <firmware version>", "updates the firmware for a thing"));
     }
 
     @Reference(cardinality = ReferenceCardinality.MULTIPLE, policy = ReferencePolicy.DYNAMIC)
