@@ -17,8 +17,6 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
 import static org.openhab.core.thing.DefaultSystemChannelTypeProvider.SYSTEM_OUTDOOR_TEMPERATURE;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -45,13 +43,9 @@ public class ChannelBuilderTest {
     private static final String KEY2 = "key2";
     private static final String VALUE1 = "value1";
     private static final String VALUE2 = "value2";
-    private final Map<String, String> properties = new HashMap<String, String>() {
-        private static final long serialVersionUID = 1L;
-        {
-            put(KEY1, VALUE1);
-            put(KEY2, VALUE2);
-        }
-    };
+
+    private static final Map<String, String> PROPERTIES = Map.of(KEY1, VALUE1, KEY2, VALUE2);
+
     private @NonNullByDefault({}) ChannelBuilder builder;
     private @NonNullByDefault({}) Channel channel;
 
@@ -62,7 +56,7 @@ public class ChannelBuilderTest {
         ChannelUID channelUID = new ChannelUID(new ThingUID(thingType.getUID(), "thingId"), "temperature");
         builder = ChannelBuilder.create(channelUID, SYSTEM_OUTDOOR_TEMPERATURE.getItemType()).withLabel("Test")
                 .withDescription("My test channel").withType(SYSTEM_OUTDOOR_TEMPERATURE.getUID())
-                .withProperties(properties);
+                .withProperties(PROPERTIES);
         channel = builder.build();
     }
 
@@ -99,7 +93,7 @@ public class ChannelBuilderTest {
     @Test
     public void subsequentBuildsCreateIndependentChannels() {
         Channel otherChannel = builder.withLabel("Second Test").withDescription("My second test channel")
-                .withAcceptedItemType(CoreItemFactory.NUMBER).withProperties(Collections.emptyMap()).build();
+                .withAcceptedItemType(CoreItemFactory.NUMBER).withProperties(Map.of()).build();
 
         assertThat(otherChannel.getDescription(), is(not(channel.getDescription())));
         assertThat(otherChannel.getLabel(), is(not(channel.getLabel())));
